<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.kitteh</groupId>
    <artifactId>factionsuuid-aggregator</artifactId>
    <version>0.7.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Factions Aggregator Project</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>modules/Main</module>
        <module>modules/Combiner</module>
    </modules>

    <build>
        <directory>FactionsIsAwesome</directory>
        <sourceDirectory>FactionsIsAwesome/java</sourceDirectory>
        <testSourceDirectory>FactionsIsAwesome/test</testSourceDirectory>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
